production/production-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: production-deployment
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: production-app
  template:
    metadata:
      labels:
        app: production-app
    spec:
      containers:
        - name: app-container
          image: anupamdevops/environments:productions
          ports:
            - containerPort: 80 
          # resources:
          #   limits:
          #     cpu: "1"
          #     memory: "512Mi"
          #   requests:
          #     cpu: "0.5"
          #     memory: "256Mi"
