production/production-service.yml
apiVersion: v1
kind: Service
metadata:
  name: production-service
  namespace: production
spec:
  selector:
    app: production-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30007
  type: NodePort
