production/production-ingress-resource.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prod-ingress
  namespace: production
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: my-production-app
spec:
  ingressClassName: nginx
  rules:
  - host: anupamdemos.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: production-service
            port:
              number: 80
